--- a/package.json
+++ b/package.json
@@ -27,62 +27,137 @@
         "seed": "ts-node -r tsconfig-paths/register src/seeder/seed.ts"
     },
     "dependencies": {
-        "@automapper/classes": "^8.7.7",
-        "@automapper/nestjs": "^8.7.7",
-        "@nestjs-modules/mailer": "^1.8.1",
-        "@nestjs/axios": "^2.0.0",
-        "@nestjs/common": "^8.0.0",
-        "@nestjs/config": "^2.3.1",
-        "@nestjs/core": "^8.0.0",
-        "@nestjs/passport": "^9.0.3",
-        "@nestjs/platform-express": "^8.0.0",
-        "@nestjs/swagger": "^6.2.1",
-        "@nestjs/typeorm": "^9.0.1",
-        "aws-sdk": "^2.1316.0",
+        "@automapper/classes": "^8.3.7",
+        "@automapper/core": "^8.3.7",
+        "@automapper/nestjs": "^8.3.7",
+        "@elastic/elasticsearch": "=7.13.0",
+        "@golevelup/nestjs-rabbitmq": "^1.22.0",
+        "@google-cloud/storage": "^5.17.0",
+        "@googlemaps/google-maps-services-js": "^3.3.10",
+        "@nestjs-modules/mailer": "^1.6.0",
+        "@nestjs/axios": "0.0.8",
+        "@nestjs/cli": "^8.1.5",
+        "@nestjs/common": "^8.4.6",
+        "@nestjs/config": "^2.1.0",
+        "@nestjs/core": "^8.4.6",
+        "@nestjs/event-emitter": "^1.1.1",
+        "@nestjs/jwt": "^8.0.0",
+        "@nestjs/passport": "^8.2.1",
+        "@nestjs/platform-express": "^8.4.6",
+        "@nestjs/platform-socket.io": "^8.4.7",
+        "@nestjs/schedule": "^2.0.1",
+        "@nestjs/swagger": "^5.1.5",
+        "@nestjs/terminus": "^8.0.6",
+        "@nestjs/typeorm": "^8.1.2",
+        "@nestlab/google-recaptcha": "^2.1.2",
+        "@socket.io/redis-adapter": "^7.1.0",
+        "@types/lodash": "^4.14.178",
+        "@types/mjml": "^4.7.0",
+        "adm-zip": "^0.5.9",
+        "apollo-server-express": "^2.16.1",
+        "aws-sdk": "^2.517.0",
+        "axios": "^0.27.2",
         "bcryptjs": "^2.4.3",
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.0",
-        "firebase-admin": "^11.5.0",
+        "bull": "^4.10.2",
+        "class-transformer": "^0.3.1",
+        "class-validator": "^0.11.1",
+        "date-fns": "^2.28.0",
+        "device-detector-js": "^3.0.3",
+        "dotenv": "^8.1.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "exceljs": "^4.3.0",
+        "express-rate-limit": "^5.0.0",
+        "firebase-admin": "^10.0.1",
+        "glob": "^7.2.0",
         "handlebars": "^4.7.7",
-        "moment": "^2.29.4",
-        "morgan": "^1.10.0",
+        "helmet": "^3.20.0",
+        "install": "^0.13.0",
+        "lodash": "^4.17.21",
+        "mime-types": "~2.1.24",
+        "mjml": "^4.12.0",
+        "moment": "^2.29.2",
+        "moment-timezone": "^0.5.39",
+        "morgan": "^1.10",
+        "mysql": "^2.18.1",
         "nest-mqtt": "^0.2.0",
-        "nestjs-newrelic": "^0.0.2",
+        "nestjs-i18n": "^8.2.2",
+        "newrelic": "^8.6.0",
+        "nodemailer": "^6.7.2",
+        "npm": "^8.2.0",
+        "object-sizeof": "^1.6.3",
+        "papaparse": "^5.3.2",
+        "passport": "^0.5.0",
         "passport-firebase-jwt": "^1.2.1",
-        "passport-jwt": "^4.0.1",
-        "pg": "^8.9.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.7.3",
+        "pretty-error": "^2.1.1",
+        "puppeteer": "^19.4.0",
+        "rate-limiter-flexible": "^2.3.7",
+        "redis": "^4.0.6",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
+        "sharp": "^0.29.3",
+        "snake-camel": "^1.0.8",
+        "socket.io": "^4.4.1",
+        "source-map-support": "^0.5.21",
         "speakeasy": "^2.0.0",
-        "typeorm": "^0.3.12",
-        "winston": "^3.8.2",
-        "winston-daily-rotate-file": "^4.7.1"
+        "swagger-ui-express": "^4.1.4",
+        "tmp": "^0.2.1",
+        "twilio": "^3.76.1",
+        "typeorm": "0.3.6",
+        "uuid": "^8.3.2",
+        "vn-num2words": "^1.0.4",
+        "winston": "^3.2.1",
+        "winston-daily-rotate-file": "^3.10.0",
+        "xml2js": "^0.4.21"
     },
     "devDependencies": {
-        "@nestjs/cli": "^8.0.0",
-        "@nestjs/jwt": "^10.0.2",
-        "@nestjs/schematics": "^8.0.0",
-        "@nestjs/testing": "^8.0.0",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^10.0.0",
+        "@commitlint/lint": "^9.1.1",
+        "@nestjs/cli": "^8.2.0",
+        "@nestjs/testing": "^8.2.6",
+        "@types/bcrypt": "^5.0.0",
+        "@types/bull": "^4.10.0",
+        "@types/compression": "^1.7.2",
+        "@types/cron": "^1.7.3",
         "@types/express": "^4.17.13",
-        "@types/jest": "27.0.2",
+        "@types/express-rate-limit": "^5.0",
+        "@types/glob": "^7.2.0",
+        "@types/jest": "^26.0.0",
+        "@types/lodash": "^4.14.178",
+        "@types/mime-types": "^2.1.0",
+        "@types/morgan": "^1.7.35",
         "@types/multer": "^1.4.7",
-        "@types/node": "^16.0.0",
-        "@types/supertest": "^2.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
-        "eslint": "^8.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "jest": "^27.2.5",
-        "prettier": "^2.3.2",
-        "source-map-support": "^0.5.20",
-        "supertest": "^6.1.3",
-        "ts-jest": "^27.0.3",
-        "ts-loader": "^9.2.3",
-        "ts-node": "^10.0.0",
-        "tsconfig-paths": "^3.10.1",
-        "typescript": "^4.3.5"
+        "@types/newrelic": "^7.0.2",
+        "@types/node": "^14.12.32",
+        "@types/nodemailer": "^6.4.4",
+        "@types/passport-local": "^1.0.34",
+        "@types/sharp": "^0.29.5",
+        "@types/supertest": "^2.0.7",
+        "@types/tmp": "^0.2.3",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^4.25.0",
+        "@typescript-eslint/parser": "^4.25.0",
+        "cz-conventional-changelog": "^3.2.0",
+        "eslint": "^6.7.2",
+        "eslint-config-prettier": "^6.7.0",
+        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "husky": "~4.1.0",
+        "jest": "^26.0.0",
+        "lint-staged": "^10.2.9",
+        "prettier": "^2.5.1",
+        "supertest": "^4.0.2",
+        "ts-jest": "^26.0.0",
+        "ts-loader": "^9.2.6",
+        "ts-node": "^10.4.0",
+        "tsc-watch": "^4.2.3",
+        "tsconfig-paths": "^3.8.0",
+        "typescript": "^4.5.5"
     },
     "jest": {
         "moduleFileExtensions": [
@@ -91,7 +166,7 @@
             "ts"
         ],
         "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
+        "testRegex": ".spec.ts$",
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
         },
@@ -100,5 +175,33 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
+    },
+    "lint-staged": {
+        "*.@(ts)": [
+            "eslint --fix"
+        ]
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog",
+            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run build && lint-staged"
+        }
+    },
+    "keywords": [
+        "nestjs",
+        "boilerpale",
+        "microservice",
+        "ddd",
+        "cqrs",
+        "eventsourcing",
+        "eventstore"
+    ],
+    "publishConfig": {
+        "@zodinet-commerce:registry": "https://npm.pkg.github.com"
     }
 }
