--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,11 @@
 {
-    "singleQuote": true,
-    "printWidth": 80,
-    "editor.formatOnSave": false,
-    "proseWrap": "always",
+    "trailingComma": "es5",
     "tabWidth": 4,
-    "requireConfig": false,
-    "useTabs": false,
-    "trailingComma": "none",
-    "bracketSpacing": true,
+    "semi": true,
+    "singleQuote": true,
+    "jsxSingleQuote": false,
     "jsxBracketSameLine": false,
-    "semi": true
+    "printWidth": 80,
+    "arrowParens": "always",
+    "endOfLine": "lf"
 }
