--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "exceljs": "^4.3.0",
         "express-rate-limit": "^5.0.0",
         "firebase-admin": "^10.0.1",
+        "geojson": "^0.5.0",
         "glob": "^7.2.0",
         "handlebars": "^4.7.7",
         "helmet": "^3.20.0",
@@ -126,6 +127,7 @@
         "@types/cron": "^1.7.3",
         "@types/express": "^4.17.13",
         "@types/express-rate-limit": "^5.0",
+        "@types/geojson": "^7946.0.10",
         "@types/glob": "^7.2.0",
         "@types/jest": "^26.0.0",
         "@types/lodash": "^4.14.178",
