--- a/.env
+++ b/.env
@@ -8,12 +8,13 @@ ENABLE_ORM_LOGS=true
 ENABLE_DOCUMENTATION=true
 
 APP_SECRET=PROTEE@2023
+PORTAL_URL=localhost:3000
 
 # Database environment variables
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=datxol
+DATABASE_PASSWORD=123456
 DATABASE_NAME=protee
 DATABASE_SSL=false
 
