--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "author": "",
     "private": true,
     "license": "UNLICENSED",
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json && nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -68,7 +71,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "exceljs": "^4.3.0",
         "express-rate-limit": "^5.0.0",
-        "firebase-admin": "^10.0.1",
+        "firebase-admin": "^10.0.0",
         "geojson": "^0.5.0",
         "glob": "^7.2.0",
         "handlebars": "^4.7.7",
