--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@nestjs/typeorm": "^8.1.2",
         "@nestlab/google-recaptcha": "^2.1.2",
         "@socket.io/redis-adapter": "^7.1.0",
+        "@types/cors": "^2.8.13",
         "@types/lodash": "^4.14.178",
         "@types/mjml": "^4.7.0",
         "adm-zip": "^0.5.9",
@@ -135,7 +136,7 @@
         "@types/jest": "^26.0.0",
         "@types/lodash": "^4.14.178",
         "@types/mime-types": "^2.1.0",
-        "@types/morgan": "^1.7.35",
+        "@types/morgan": "^1.9.4",
         "@types/multer": "^1.4.7",
         "@types/newrelic": "^7.0.2",
         "@types/node": "^14.12.32",
