--- a/.env
+++ b/.env
@@ -41,14 +41,14 @@ DATABASE_SSL=true
 # DATABASE_PASSWORD=R2dQWmyHTK1n
 # DATABASE_NAME=verceldb
 
-# DATABASE_HOST=localhost
-# DATABASE_PORT=5432
-# DATABASE_USERNAME=postgres
-# DATABASE_PASSWORD=123456
-# DATABASE_NAME=protee
-
-DATABASE_HOST=ep-sweet-sun-657385.ap-southeast-1.aws.neon.tech
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USERNAME=ddhoangdat.it
-DATABASE_PASSWORD=wCYTPQf23qFi
-DATABASE_NAME=neondb
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=123456
+DATABASE_NAME=protee
+
+# DATABASE_HOST=ep-sweet-sun-657385.ap-southeast-1.aws.neon.tech
+# DATABASE_PORT=5432
+# DATABASE_USERNAME=ddhoangdat.it
+# DATABASE_PASSWORD=wCYTPQf23qFi
+# DATABASE_NAME=neondb
