--- a/vercel.json
+++ b/vercel.json
@@ -18,18 +18,24 @@
             ]
         }
     ],
-    "headers": [
-        {
-          "source": "/(.*)",
-          "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "*" }
-          ]
-        },
-        {
-          "source": "/portal-protee.vercel.app/(.*)",
-          "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "*" }
-          ]
-        }  
-    ]
+    "headers": [{
+        "source": "/api/(.*)",
+        "headers": [{
+                "key": "Access-Control-Allow-Credentials",
+                "value": "true"
+            },
+            {
+                "key": "Access-Control-Allow-Origin",
+                "value": "*"
+            },
+            {
+                "key": "Access-Control-Allow-Methods",
+                "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+            },
+            {
+                "key": "Access-Control-Allow-Headers",
+                "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Referer, X-Api-Version, Sec-Ch-Ua, Sec-Ch-Ua-Mobile, Sec-Ch-Ua-Platform, User-Agent, Authorization"
+            }
+        ]
+    }]
 }
