--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
         }
     ],
     "headers": [{
-        "source": "/(.*)",
+        "source": "/api/(.*)",
         "headers": [{
                 "key": "Access-Control-Allow-Credentials",
                 "value": "true"
