--- a/vercel.json
+++ b/vercel.json
@@ -10,32 +10,12 @@
         {
             "src": "/(.*)",
             "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ]
-        }
-    ],
-    "headers": [{
-        "source": "/api/(.*)",
-        "headers": [{
-                "key": "Access-Control-Allow-Credentials",
-                "value": "true"
-            },
-            {
-                "key": "Access-Control-Allow-Origin",
-                "value": "*"
-            },
-            {
-                "key": "Access-Control-Allow-Methods",
-                "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-            },
-            {
-                "key": "Access-Control-Allow-Headers",
-                "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Referer, X-Api-Version, Sec-Ch-Ua, Sec-Ch-Ua-Mobile, Sec-Ch-Ua-Platform, User-Agent, Authorization"
+            "methods": ["GET", "POST", "PUT", "DELETE"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Headers": "Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Referer, X-Api-Version, Sec-Ch-Ua, Sec-Ch-Ua-Mobile, Sec-Ch-Ua-Platform, User-Agent, Authorization"
             }
-        ]
-    }]
+        }
+    ]
 }
