feat: get nearly dangerous location

--- a/.env.sample
+++ b/.env.sample
@@ -39,3 +39,5 @@ RESET_PIN_EXPIRE=$RESET_PIN_EXPIRE
 FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID
 FIREBASE_PRIVATE_KEY=$FIREBASE_PRIVATE_KEY
 CLIENT_EMAIL=$CLIENT_EMAIL
+
+RADIUS=$RADIUS
