--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "@nestjs/event-emitter": "^1.1.1",
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.2.1",
-        "@nestjs/platform-express": "^8.4.6",
+        "@nestjs/platform-express": "^8.4.7",
         "@nestjs/platform-socket.io": "^8.4.7",
         "@nestjs/schedule": "^2.0.1",
         "@nestjs/swagger": "^5.1.5",
@@ -65,6 +65,7 @@
         "bull": "^4.10.2",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.11.1",
+        "cors": "^2.8.5",
         "date-fns": "^2.28.0",
         "device-detector-js": "^3.0.3",
         "dotenv": "^8.1.0",
