fix: origin config

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ JWT_EXPIRATION_TIME=3600
 FALLBACK_LANGUAGE=en
 ENABLE_ORM_LOGS=true
 ENABLE_DOCUMENTATION=true
+ORIGIN=https://adminproteever3.vercel.app
 
 APP_SECRET=PROTEE@2023
 PORTAL_URL=localhost:3000
