--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@types/cors": "^2.8.13",
         "@types/lodash": "^4.14.178",
         "@types/mjml": "^4.7.0",
+        "@types/socket.io": "^3.0.2",
         "adm-zip": "^0.5.9",
         "apollo-server-express": "^2.16.1",
         "aws-sdk": "^2.517.0",
@@ -107,7 +108,7 @@
         "rxjs": "^7.2.0",
         "sharp": "^0.29.3",
         "snake-camel": "^1.0.8",
-        "socket.io": "^4.4.1",
+        "socket.io": "^4.6.2",
         "source-map-support": "^0.5.21",
         "speakeasy": "^2.0.0",
         "swagger-ui-express": "^4.1.4",
